# hyprland-set-winodw-rule

./: Cargo.toml  README.md  wlprop.sh
src/: hyprland_config.rs  main.rs  system_info.rs  window_selector.rs
src/shell_command/: types.rs
src/shell_command/commands/: generate.rs  mod.rs  options_exec.rs
src/tui/: mod.rs  root.rs
src/tui/widgets/: mod.rs  window_select.rs
src/wayland/: mod.rs  types.rs  window_selector.rs
src/wayland/buffer_surface/: base_surface_buffer.rs  has_output.rs  in_process.rs  mod.rs  ready_to_draw.rs
src/wayland/protocols/: mod.rs  wl_pointer.rs  wl_state.rs  wlr_layer_surface.rs
