[package]
name = "hyprland-window-rule"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "cargo", "env", "string"] }
color-eyre = "0.6.5"
directories = "6.0.0"
hyprland = "0.4.0-beta.3"
ratatui = "0.29.0"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
wayland-backend = "0.3.11"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["staging", "client", "unstable", "server"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
